# mypypi

./: .gitignore  README.md  Taskfile.yml  gen_index.py  index.html  pyproject.toml
.github/workflows/: static.yml
groundingdino/: index.html
index/: index.html
index/cyac/: index.html
index/pycocotools/: index.html
