[project]
name = ""
version = "0.1.0.dev0"
description = ""
authors = [
    {name = "Bingsu",email = "ks2515@naver.com"},
]
dependencies = [
    "simple503>=0.4.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.3",
    "ruff>=0.0.284",
    "ipykernel>=6.25.1",
]
